[package]
name = "rustume"
version = "0.1.0"
authors = ["jdurkin91 <jdurkin91@gmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0.32"
serde_json = "1.0.32"
serde_derive = "1.0.32"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
